--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Adrish Mitra",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -16,6 +17,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "twilio": "^4.15.0"
   }
 }
