--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "gridfs-stream": "^1.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "twilio": "^4.15.0"
   }
