--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "gridfs-stream": "^1.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "twilio": "^4.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
